--- a/src/main.css
+++ b/src/main.css
@@ -11,7 +11,8 @@
     position: relative;
     width: 100%;
     padding: 10px;
-    background-color: white;
+    background-color: #113D4D;
+    color: white;
     text-align: center;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
     z-index: 2;
